cluster/core/monitoring/influxdb/ingress-route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: influxdb
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`influxdb.${SECRET_DOMAIN}`)
      kind: Rule
      services:
        - name: influxdb-influxdb2
          namespace: monitoring
          port: 80
          scheme: http
  tls:
    secretName: "influxdb-${SECRET_DOMAIN/./-}-tls"
